@@ -30,6 +30,7 @@ wxGTK:
 
 wxMSW
 
+- Fixed crash with ownerdrawn menu items accelerators (Perry Miller)
 - Fixed MDI context menu problem.
 - Create msw/rcdefs.h in setup.h's directory, which can be included by
   resource files. It containts platform/compiler specific defines (such as
